--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -11,7 +11,7 @@ footer {
 .footer-header {
   display: flex;
   flex-direction: column;
-  align-items: center;
+    justify-content: center;
   margin-bottom: 2rem;
 }
 
@@ -53,7 +53,7 @@ footer {
 .footer-links-container {
   display: flex;
   justify-content: center;
-  gap: 3rem; /* Adjust the gap between the two link lists */
+  gap: 4rem; /* Adjust the gap between the two link lists */
 }
 
 .footer-links {
