--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -9,10 +9,23 @@ footer {
 }
 
 .footer-header {
-  display: flex;
-  flex-direction: column;
-    justify-content: center;
-  margin-bottom: 2rem;
+    display: flex;
+    justify-content: space-between; /* Distribute space between logo and text */
+    align-items: center; /* Vertically center-align children */
+    flex-wrap: wrap; /* Allow wrapping for smaller screens */
+    width: 100%; /* Take full width */
+    max-width: 1200px; /* You can adjust this value based on your design preference */
+    margin: 0 auto; /* Center the container */
+    padding: 0 15px; /* Some padding on both sides for responsiveness */
+}
+
+.footer-header a {
+    flex-shrink: 0; /* Prevent shrinking of the logo */
+}
+
+.footer-header p {
+    flex: 1; /* Allow the text to take up remaining space */
+    text-align: right; /* Align text to the right */
 }
 
 .footer-header h2 {
@@ -20,14 +33,10 @@ footer {
   margin-bottom: 1rem;
 }
 
-.footer-header p {
-  text-align: center;
-  margin-bottom: 1rem;
-}
-
-.footer-header a {
-  color: #FFF;
-  text-decoration: none;
+.info-container {
+    display: flex;
+    align-items: center; /* Vertically align the logo and text */
+    gap: 10px; /* Gap between logo and text */
 }
 
 .footer-socials {
@@ -35,8 +44,8 @@ footer {
   gap: 15px;
 }
 
-.footer-header > a > img {
-  transform: scale(0.35);  
+.footer-header > div > a > img {
+  transform: scale(0.35);
 }
 
 .footer-socials img {
