--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -12,23 +12,25 @@ footer {
     display: flex;
     justify-content: center;
     align-items: center; /* Vertically center-align children */
-    margin: 0px 0; /* Reduce margin top and bottom */
-    margin-bottom: -3rem;  /* Adjust this value as needed */
+    padding: 10px 10px 10px 10px;
 }
 .footer-header p {
     flex: 1; /* Allow the text to take up remaining space */
     text-align: center; /* Align text to the right */
 }
 .footer-header > a > img {
-    transform: scale(0.35);
+    width: 80px;
+    height: auto;
+    /*margin-left: 0;*/
+    /*margin-right: 20px;*/
 }
 
 .info-container {
     display: flex;
-    align-items: center; /* Vertically align the logo and text */
+    /*align-items: center; !* Vertically align the logo and text *!*/
     gap: 1rem;
-    flex-direction: column; /* Stack items vertically */
-    margin: 0; /* Reset default margin */
+    justify-content: center;
+    margin: 0;
 }
 .info-container p {
     font-size: 14px;
@@ -44,7 +46,7 @@ footer {
   height: 24px;
 }
 .footer-socials a {
-  font-size: 24px; 
+  font-size: 24px;
   color: #FFF;
   text-decoration: none;
 }
@@ -56,8 +58,8 @@ footer {
 }
 .footer-links {
   list-style-type: none;
-  padding: 0;
-  margin: 0;
+  padding: 10px 10px 10px 10px;
+  /*margin: 0;*/
 }
 .footer-links li {
   margin-bottom: 0.5rem; /* Spacing between links */
