--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -72,9 +72,9 @@ dfn {
 h1 {
     font-size: 48px;
     /*font-weight: 900; !* Black/ Heavy *!*/
-    /*font-weight: 800; !* Extra Bold / Ultra Bold *!*/
+    font-weight: 800; /* Extra Bold / Ultra Bold */
     /*font-weight: 700; !* Bold *!*/
-    font-weight: 600; /* Semi Bold / Demi Bold */
+    /*font-weight: 600; !* Semi Bold / Demi Bold *!*/
     /*font-weight: 500; !* Medium *!*/
     /*font-weight: 400; !* Normal / Regular *!*/
     /*font-weight: 300; !* Light *!*/
@@ -82,13 +82,44 @@ h1 {
     /*font-weight: 100; !* Thin *!*/
     text-align: left;
   margin: 0;
-  margin-bottom: 2rem;
+  /*margin-bottom: 0.5rem;*/
   padding: 0;
   line-height: var(--line-height-dense);
-  letter-spacing: -0.01em;
 }
 h1 > b {
   color: var(--color-primary);
+}
+h2 {
+    font-size: 42px;
+    font-weight: 600; /* Semi Bold / Demi Bold */
+    text-align: left;
+    margin: 0;
+    margin-bottom: 0.2rem;
+    padding: 0;
+    line-height: var(--line-height-dense);
+}
+h3 {
+    font-size: 32px;
+    font-weight: 500; /* Semi Bold / Demi Bold */
+    text-align: left;
+    margin: 0;
+    margin-bottom: 0.6rem;
+    padding: 0;
+    line-height: var(--line-height-dense);
+}
+p {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+    font-size: 18px;
+    font-weight: 300; /* Light */
+    margin-bottom: var(--space-4);
+}
+sub {
+    font-size: 22px;
+    text-align: left;
+    font-weight: 300; /* Light */
+    color: #2B5C65;
 }
 img {
   border-style: none;
@@ -131,11 +162,6 @@ ul,
 ol,
 dl,
 dd,
-p {
-  margin: 0;
-  padding: 0;
-  margin-bottom: var(--space-4);
-}
 ul,
 ol {
   margin-left: var(--space-4);
