--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -70,7 +70,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   color: var(--color-text);
-  font-family: 'Barlow', sans-serif;
+  font-family: 'Barlow SemiCondensed', sans-serif;
   font-weight: normal;
   margin: 0;
   word-wrap: break-word;
