--- a/src/components/pricing.css
+++ b/src/components/pricing.css
@@ -4,57 +4,63 @@ th {
     border-top: hidden!important;
     width: 23%;
 }
-
 th:first-child {
     width: 31%;
 }
-
 tr {
     border-left: 3px solid black;
 }
-
 table td:first-child {
     font-size: 20px;
     font-weight: bold;
 }
-
 table td {
     font-size: 24px;
 }
+table {
+    margin-bottom: 3rem;
+}
 
-/*table.small {*/
-/*    width: 600px;*/
-/*    white-space: nowrap;*/
-/*    max-width: 100%;*/
-/*}*/
+table.small td:first-child {
+    /*font-size: 14px;*/
+    font-weight: bold;
+    width: 31%;
+}
+table.small td {
+    font-size: 18px;
+}
 
-/*table.small td:first-child {*/
-/*    font-size: 14px;*/
-/*    font-weight: bold;*/
-/*    width: 31%;*/
-/*}*/
-
-/*table.small td {*/
-/*    font-size: 12px;*/
-/*}*/
+sup {
+    horiz-align: left;
+    vertical-align: baseline;
+    position: relative;
+    font-size: 18px;
+    top: -0.4em; /* Adjust as necessary */
+}
 
 .button {
     font-size: 24px;
 }
+/* Apply the indentation to all p tags following the structure */
+p > sup + strong + br + span,
+p > sup + strong + br + span + br + span,
+p > sup + strong + br + span + br + span + br + span,
+P > span,
+table.small {
+    padding-left: 20px;
+    display: block;
+    margin-right: -20px;
+}
 
-/*p {*/
-/*    font-size: 12px;*/
-/*}*/
-
-/*strong {*/
-/*    font-size: 16px;*/
-/*}*/
+/* To make the p elements as wide as the table, assuming the table is 100% width */
+p, table {
+    width: 100%; /* Adjust if the table has a different width */
+}
 
 .html-content {
     display: flex;
     flex-direction: column;
     align-content: center;
-    align-items: center;
     width: 80%;        /* Adjust the width as needed */
     /*max-width: 500px;  !* Adjust the maximum width as needed *!*/
     margin: auto;      /* Centers the content horizontally */
@@ -63,3 +69,5 @@ table td {
     /*max-height: 100vh; !* Adjust the maximum height as needed *!*/
     overflow: auto;    /* Adds scrollbars if content is larger than the element */
 }
+
+
