--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -25,20 +25,24 @@
   --size-content: 54rem;
   --size-gutter: var(--space-5);
   --size-gap: var(--space-6);
+  --color-background-light: #fff;
   --sub-color-light: #2B5C65;
   --fyncom-blue: #4A90E2;
   --fyncom-light-blue: #13DCEC;
   --fyncom-lightest-blue: #80DED9;
   --fyncom-red: #FF5A5F;
   --fyncom-cyan: #408A97;
-  --fyncom-light-cyan: #206076;
-  --fyncom-lightest-cyan: #003554;
+  --fyncom-dark-cyan: #206076;
+  --fyncom-darkest-cyan: #003554;
   --fyncom-yellow: #EEE539;
   --karmacall-gold: #ff8c00;
   --karmacall-green: #008080;
   --robocash-green: #3fa060;
     --color-bar: #000;
     --help-box: #fff;
+    --dropdown-container-color: var(--fyncom-lightest-blue);
+    --dropdown-text-color: #000;
+    --dropdown-hover-color: white;
 }
 
 /* Automatically switch to dark mode based on user's system preference */
@@ -50,6 +54,9 @@
         --sub-color: #88C0D0;
         --color-bar: #fff;
         --help-box: #000;
+        --dropdown-container-color: var(--fyncom-darkest-cyan);
+        --dropdown-text-color: #fff;
+        --dropdown-hover-color: #000;
     }
 }
 
@@ -61,6 +68,9 @@
     --sub-color: #88C0D0;
     --color-bar: #fff;
     --help-box: #000;
+    --dropdown-container-color: var(--fyncom-darkest-cyan);
+    --dropdown-text-color: #fff;
+    --dropdown-hover-color: #000;
 }
 
 html {
@@ -71,6 +81,7 @@ html {
   line-height: var(--line-height-normal);
   overflow-y: scroll;
 }
+/*set the background of the site - consider later update*/
 body {
   background-color: var(--color-background, var(--color-background-light));
   -moz-osx-font-smoothing: grayscale;
