--- a/src/components/marketing-use-cases.css
+++ b/src/components/marketing-use-cases.css
@@ -1,30 +1,20 @@
-.marketing-use-cases {
-    /*font-family: 'Arial', sans-serif;*/
-}
-
-.container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.image-section {
-    flex: 1;
-    background-image: url('../images/illustrations/handshake.png');
-    background-size: cover;
-    background-position: center;
+.story-image {
+    min-width: 400px;
+    max-width: 600px;
 }
 .hero-section {
-    background: #f4f7fa;
     text-align: center;
     padding: 50px;
-    flex: 1;
+    flex: 1  1 auto;
+    display: flex;
 }
-
 .hero-content {
-    max-width: 500px; /* Adjust the width as needed */
+    /*max-width: 500px; !* Adjust the width as needed *!*/
+    background: var(--fyncom-blue);
     margin-left: auto;
     padding: 20px;
+    flex: 1  1 auto;
+    max-width: 1000px;
 }
 
 .demo-button {
@@ -34,10 +24,8 @@
     padding: 10px 20px;
     cursor: pointer;
     border-radius: 10px;
-    font-size: 16px;
     transition: background-color 0.3s;
 }
-
 .demo-button:hover {
     background-color: #e55055;
 }
@@ -48,7 +36,6 @@
     gap: 20px;
     padding: 40px;
 }
-
 .use-case {
     background: white;
     border-radius: 20px;
@@ -56,24 +43,21 @@
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
-
 .use-case h2 {
     color: #333;
     margin-bottom: 15px;
 }
-
 .use-case p {
     color: #666;
 }
 
 .integrations-section {
-    background: #fff;
+    /*background: #fff;*/
     text-align: center;
     padding: 50px;
 }
-
 .integrations-section h2 {
-    color: #333;
+    text-align: center;
     margin-bottom: 20px;
 }
 
@@ -82,17 +66,12 @@
     justify-content: center;
     gap: 50px;
 }
-
 .logo {
-    /* Adjust width as needed to fit your design */
     width: 250px;
     height: auto;
     object-fit: contain;
 }
-
-/* If you want to add a hover effect to the logos */
 .logo:hover {
-    /* example of a simple scale transform on hover */
     transform: scale(1.05);
     transition: transform 0.3s;
 }
