getting marketing use cases fixed up

--- a/src/components/marketing-use-cases.css
+++ b/src/components/marketing-use-cases.css
@@ -16,9 +16,11 @@
     flex: 1  1 auto;
     max-width: 1000px;
 }
-
+.hero-content h1, p{
+    color: #fff;
+}
 .demo-button {
-    background-color: #ff5a5f;
+    background-color: var(--fyncom-red);
     color: white;
     border: none;
     padding: 10px 20px;
@@ -37,22 +39,29 @@
     padding: 40px;
 }
 .use-case {
-    background: white;
+    background: var(--container-color);
     border-radius: 20px;
-    width: 300px;
+    max-width: 500px;
+    min-width: 300px;
     padding: 20px;
     box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
+.background-stripe {
+    /*background-color: #3fa060;*/
+}
 .use-case h2 {
-    color: #333;
+    color: #FFFFFF;
     margin-bottom: 15px;
 }
 .use-case p {
-    color: #666;
+    color: #FFFFFF;
+}
+.use-case-image {
+    max-width: 280px;
+    margin: 0;
 }
 
 .integrations-section {
-    /*background: #fff;*/
     text-align: center;
     padding: 50px;
 }
