--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -45,6 +45,7 @@
     --dropdown-hover-color: white;
     --button-learn-more: var(--fyncom-yellow);
     --button-learn-more-hover: var(--karmacall-gold);
+    --container-color: var(--fyncom-cyan);
     --logo-dark-mode: url('../images/FynCom_Logo_New-LARGEST-White.png');
     --logo-light-mode: url('../images/FynCom_Logo_New-LARGEST.png');
     .fyncom-logo {
@@ -75,6 +76,7 @@
         --dropdown-hover-color: #000;
         --button-learn-more: var(--fyncom-blue);
         --button-learn-more-hover: var(--fyncom-cyan);
+        --container-color: var(--fyncom-darkest-cyan);
         .fyncom-logo {
             content: var(--logo-dark-mode);
             display: block;
@@ -103,6 +105,7 @@
     --dropdown-hover-color: #000;
     --button-learn-more: var(--fyncom-blue);
     --button-learn-more-hover: var(--fyncom-cyan);
+    --container-color: var(--fyncom-dark-cyan);
     .fyncom-logo {
         content: var(--logo-dark-mode);
         display: block;
