--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -173,6 +173,33 @@
     }
 }
 
+/* call to action button */
+.call-to-action {
+    text-align: center;
+    display: grid;
+    justify-content: center;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+
+}
+.cta-button {
+    display: block; /* Allows the element to take padding and margin properly */
+    background-color: var(--fyncom-red);
+    color: white;
+    padding: 20px 40px; /* Increase padding for a larger button */
+    cursor: pointer;
+    border-radius: 10px;
+    font-size: 3rem; /* Adjust font-size for larger text */
+    transition: background-color 0.3s;
+    text-decoration: none; /* Remove underline from the link */
+    margin: auto; /* Centers the button */
+    max-width: 600px; /* Maximum width for the button */
+}
+
+.cta-button:hover {
+    background-color: #e55055;
+}
 
 html {
   -webkit-text-size-adjust: 100%;
