slight changes to css

--- a/src/components/scam-block-cash-back.css
+++ b/src/components/scam-block-cash-back.css
@@ -1,5 +1,5 @@
 /* Container styling */
-.use-cases-container {
+.use-cases-sales-marketing-container {
     margin: 0 auto;
     width: 80%;
     max-width: 1200px;
