--- a/src/components/sales-and-marketing-use-cases.css
+++ b/src/components/sales-and-marketing-use-cases.css
@@ -32,7 +32,7 @@
     background-color: #e55055;
 }
 
-.use-cases-container {
+.use-cases-sales-marketing-container {
     display: flex;
     justify-content: center;
     gap: 20px;
@@ -87,7 +87,7 @@
 
 /* Adjustments for responsive design */
 @media (max-width: 768px) {
-    .use-cases-container {
+    .use-cases-sales-marketing-container {
         flex-direction: column;
         align-items: center;
     }
