--- a/src/components/help-center.css
+++ b/src/components/help-center.css
@@ -56,4 +56,27 @@
 
 .markdown-content p {
     color: var(--color-text);
+    max-width: fit-content;
+}
+
+.markdown-content li {
+    margin-bottom: auto;
+    text-align: left;
+}
+
+.markdown-content img {
+    filter: var(--img-brightness);
+    max-width: 600px;
+}
+
+.markdown-content table {
+    border-collapse: separate; /* Allows for border-radius to work, but may not have the desired effect */
+    border-spacing: 0; /* Removes spacing between cells */
+    border: 2px solid var(--color-bar); /* Sets the border for the entire table */
+    border-radius: 8px; /* Rounded corners for the table */
+
+}
+.markdown-content th, .markdown-content td {
+    border: 1px solid var(--color-bar);
+    padding: 4px;
 }
