--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -1,10 +1,40 @@
-.content-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.modal {
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0,0,0);
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content {
+    background-color: var(--color-background);
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
 }
 
-.content-container iframe {
-    width: 70%;
-    height: 1200px;
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.nano-address {
+    word-wrap: break-word;
+}
+
+.qr-code-container {
+    text-align: center;
 }
