--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -6,8 +6,8 @@
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgb(0,0,0);
-    background-color: rgba(0,0,0,0.4);
+    background-color: var(--fyncom-blue); /* Fallback color */
+    background-color: rgba(var(--fyncom-blue-rgb), 0.7); /* RGBA with opacity */
 }
 .modal-content {
     background-color: var(--color-background);
