--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -30,7 +30,8 @@
     --color-background: #fff;
     --sub-color-light: #2B5C65;
   --fyncom-blue: #4A90E2;
-  --fyncom-light-blue: #13DCEC;
+    --fyncom-blue-rgb: 74, 144, 226; /* The RGB equivalent of #4A90E2 */
+    --fyncom-light-blue: #13DCEC;
   --fyncom-lightest-blue: #80DED9;
   --fyncom-red: #FF5A5F;
   --fyncom-cyan: #408A97;
