--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -18,15 +18,14 @@
 }
 
 .close {
-    color: #aaa;
+    color: var(--color-text);
     float: right;
-    font-size: 28px;
+    font-size: 60px;
     font-weight: bold;
 }
-
 .close:hover,
 .close:focus {
-    color: black;
+    color: var(--fyncom-yellow);
     text-decoration: none;
     cursor: pointer;
 }
@@ -37,4 +36,11 @@
 
 .qr-code-container {
     text-align: center;
+    max-width: 800px;
+}
+
+.qr-code-container img {
+    /*text-align: center;*/
+    max-width: 400px;
+    max-height: auto;
 }
