--- a/src/components/blocked-email.css
+++ b/src/components/blocked-email.css
@@ -1,3 +1,12 @@
+.modal-content h2 {
+    color: var(--fyncom-red);
+    text-align: center;
+}
+.modal-content p {
+    text-align: center;
+    margin-bottom: 0.4rem;
+    max-width: 100%;
+}
 .modal {
     position: fixed;
     z-index: 1;
@@ -8,12 +17,14 @@
     overflow: auto;
     background-color: var(--fyncom-blue); /* Fallback color */
     background-color: rgba(var(--fyncom-blue-rgb), 0.7); /* RGBA with opacity */
+    text-align: center;
 }
 .modal-content {
     background-color: var(--color-background);
-    margin: 15% auto;
+    margin: 5% auto; /* Adjusted margin for better vertical alignment */
     padding: 20px;
-    border: 1px solid #888;
+    border: 1px solid var(--color-bar);
+    max-height: 80vh; /* Prevents the modal from being too tall */
     width: 80%;
 }
 
@@ -33,14 +44,24 @@
 .nano-address {
     word-wrap: break-word;
 }
-
 .qr-code-container {
     text-align: center;
     max-width: 800px;
+    /* Add the following for vertical centering in the container */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 100%; /* Ensure the container takes up available space */
 }
 
 .qr-code-container img {
-    /*text-align: center;*/
-    max-width: 400px;
-    max-height: auto;
+    width: 80%; /* Responsive width */
+    max-height: 70vh; /* Adjust as necessary to keep within modal */
+    margin: auto; /* Center the image in the available space */
+    object-fit: contain; /* This will make sure the image is scaled properly within the constraints */
+}
+
+.content-container sub {
+    text-align: center;
+    max-width: 70%;
 }
