--- a/src/components/index.css
+++ b/src/components/index.css
@@ -1,29 +1,25 @@
-.AppText. why-fyncom {
+.AppText {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 10vh;
+  /*height: 10vh;*/
   padding: 2rem;
-  /*margin: auto;*/
-  /*margin-top: 100px;*/
   box-sizing: border-box; /* This ensures padding is included in the height calculation */
 }
 
-.why-fyncom h3 {
-  align-content: center;
-  text-align: center;
+.why-fyncom {
+  display: grid;
+  justify-content: center;
 }
-.why-fyncom p {
-  align-content: center;
+.why-fyncom h3, .why-fyncom p {
   text-align: center;
-  padding: 2rem;
 }
 
 .logo-container {
   display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   flex: 1;                 /* Takes equal space as the text-block */
 }
 
@@ -35,44 +31,13 @@
 .top-logos-left {
   display: flex;
   justify-content: center;
-  /*gap: 1rem;*/
-}
-.markdown-content img {
-  filter: var(--img-brightness);
-  max-width: 600px;
+  vertical-align: middle;
+  text-underline-offset: unset;
+  border-radius: unset;
 }
 
 /* ATTEMPTS TO FIX LINK ISSUES BELOW THIS*/
-
-/*.top-logos-left > a {*/
-/*  margin: 0;*/
-/*  margin-right: 0;*/
-/*  width: auto; !* Or specific width if needed *!*/
-/*}*/
-
-/*a > .index-logo-discord {*/
-/*  margin: 0;*/
-/*  margin-right: 0;*/
-/*  width: auto; !* Or specific width if needed *!*/
-/*  !* Your styles here will affect the <a> tag that directly contains the image with class .index-logo-discord *!*/
-/*}*/
-
-.index-links a, a index-links {
-  display: inline-block; /* Or other display properties */
-  /*width: auto; !* Or specific width if needed *!*/
-  line-height: 0; /* This removes any extra line-height space around the image */
-
-  /* Other styles */
-  /*background-color: transparent;*/
-  /*color: transparent;*/
-  /*text-decoration: none;*/
-  /*font-weight: 100;*/
-  /*text-decoration: underline;*/
-  /*text-decoration-thickness: 0;*/
-  /*text-underline-offset: 0;*/
-  /*margin: 0;*/
-  /*padding: 0;*/
-}
+/* the inherit link thing goes away with flex 0 on logo-container, but ruins all else*/
 
 .bottom-logo {
   display: flex;
@@ -83,14 +48,11 @@
   /*display: block; !* This removes any default inline image space *!*/
   /*width: 100%; !* This constrains the image to the width of the <Link> *!*/
   /*height: auto; !* Keeps the aspect ratio of the image *!*/
-  /*margin-bottom: 1rem;*/
   object-fit: contain;
   margin-bottom: 0.2rem;
   margin-left: 0;
 }
-
 /* ATTEMPTS TO FIX LINK ISSUES ABOVE THIS*/
-
 
 .index-logo {
   max-width: 60%;
@@ -110,8 +72,9 @@
   transform: scale(1.15);
   transition: transform 0.3s;
 }
-.bottom-logo > .story-image {
+.bottom-logo > .index-story-image {
   filter: var(--img-brightness);
+  max-width: 70%;
 }
 
 .text-block {
@@ -134,9 +97,8 @@
   justify-content: center; /* Horizontally centers children */
   width: 100%;            /* Use the full width of the App container */
   max-width: 1200px;
-  padding: 1rem;
+  padding: 0.2rem;
   max-height: 600px;
-  /*margin: 0 auto;*/
 }
 .content-container {
   display: flex;
@@ -144,25 +106,13 @@
   gap: 2rem;
   width: 100%;            /* Use the full width of the App container */
   max-width: 1200px;      /* Adjust as needed */
-  margin: 0 auto;
 }
 
 
 /* bits and pieces*/
-.AppText p {
-  /*margin-block-start: 2rem;*/
-  text-align: left;
-  padding: 0px;
-}
-.AppText .span, .AppText .span a {
+.AppText .span, .AppText .span a, .text-wrapper-3-red {
   color: var(--fyncom-red);
-  margin: auto;
-  text-align: left;
   padding: 0px;
-}
-
-.text-wrapper-3-red {
-  color: var(--fyncom-red);
 }
 .text-wrapper-3 {
   text-decoration: underline;
@@ -195,29 +145,21 @@
     gap: 0rem;
   }
   .index-logo, .index-logo-tg, .index-logo-discord {
-    width: 80%; /* Increase width to fit mobile screens, adjust as needed */
-    margin-bottom: 1rem; /* Add some space between logos */
-    height: auto; /* Maintain aspect ratio */
+    width: 100%; /* Increase width to fit mobile screens, adjust as needed */
   }
   .index-logo {
-    max-width: 30%;
+    max-width: 40%;
     min-width: 50px;
   }
   .index-logo-tg {
-    max-width: 13%;
+    max-width: 20%;
     min-width: 40px;
   }
   .index-logo-discord {
+    max-width: 35%;
     min-width: 100px;
-    max-width: 25%;
   }
 
-  .text-block {
-    padding: 20px;
-    margin-left: 0;
-    /* If you want to add some spacing between the logos and text block on smaller screens */
-    margin-top: 1rem;
-  }
   .text-block, .text-block-left {
     margin: 1rem 0; /* Add some top and bottom margin for spacing */
     padding: 0 1rem; /* Add padding to ensure text doesn't touch the edges */
@@ -225,21 +167,6 @@
   .AppText .span {
     text-align: center;
   }
-  /* Ensure that buttons and links are easily clickable on mobile */
-  button, .cta-button, a {
-    min-width: 44px; /* The minimum recommended size for touch targets */
-    min-height: 44px; /* The minimum recommended size for touch targets */
-  }
-  /* Adjust heading sizes for mobile to ensure they don't overflow their containers */
-  h1, h2, h3 {
-    font-size: smaller; /* Adjust the font size down, or use a specific size */
-  }
-  /* Make sure that any paragraphs or spans are not too wide and have adequate line height */
-  p, span {
-    line-height: 1.5; /* Increase line height for readability */
-    word-wrap: break-word; /* Ensure long words don't overflow their containers */
-  }
-
 }
 
 
